Add SREP paper version

--- a/src/options/CMakeLists.txt
+++ b/src/options/CMakeLists.txt
@@ -1,8 +1,7 @@
 set(SOURCE_FILES_OPTIONS user_options.h user_options.cpp
                     cloud_config.h cloud_config.cpp
                     pmj_config.h pmj_config.cpp
-                    cost_function_config.h cost_function_config.cpp
-                    local_optimization_config.h local_optimization_config.cpp)
+                    cost_function_config.h cost_function_config.cpp)
 
 ADD_LIBRARY(options STATIC ${SOURCE_FILES_OPTIONS})
 
